test/asm/invalid-jr.asm
SECTION "test", ROM0
Label: ds 256
jr Label
